--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "botOwnerName": "",
-    "adminID": "",
+    "botOwnerName": "ver",
+    "adminID": "100010099516674",
     "botOwner": "https://www.facebook.com/vern.23x",
     "prefix": "@",
     "port": 10000
