--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "vrax",
   "version": "1.0.0",
-  "description": "Vrax AI Chatbot UI",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node index.js"
   },
   "dependencies": {
-    "next": "13.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "express": "^4.18.2",
+    "openai": "^3.2.1",
+    "cors": "^2.8.5"
   }
 }
