--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "openai": "^3.2.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "openai": "^3.2.1"
   }
 }
