--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "vrax",
+  "name": "test-autobot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "runApp.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "openai": "^3.2.1"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
