--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "botOwnerName": "ver",
-    "adminID": "100010099516674",
-    "botOwner": "https://www.facebook.com/vern.23x",
-    "prefix": "@",
+    "botOwnerName": "",
+    "adminID": "61576839130571",
+    "botOwner": "https://fb.com/Vern.23x",
+    "prefix": "!",
     "port": 10000
 }
