--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "botOwnerName": "",
+    "botOwnerName": "ver",
     "adminID": "61576839130571",
     "botOwner": "https://fb.com/Vern.23x",
     "prefix": "!",
